# fast_zero_rbe

./: pyproject.toml
migrations/: env.py
migrations/versions/: 5fe65c06129a_create_users_table.py
src/fast_zero_rbe/: app.py  database.py  schemas.py  security.py  settings.py
src/fast_zero_rbe/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
